# SuperDroid

./: .gitignore  AGENTS.md  LICENSE  README.md  install.sh  package.json  pyproject.toml
.factory/commands/: agent.md  analyze.md  brainstorm.md  build.md  business-panel.md  cleanup.md  design.md  document.md  estimate.md  explain.md  git.md  help.md  implement.md  improve.md  index-repo.md  index.md  load.md  pm.md  recommend.md  reflect.md  research.md  save.md  sd-agent.md  sd-help.md  sd-implement.md  sd-research.md  sd-sc.md  sd-spawn.md  sd.md  select-tool.md  spawn.md  spec-panel.md  task.md  test.md  troubleshoot.md  workflow.md
.factory/droids/: backend-architect.md  business-analyst.md  business-panel-experts.md  deep-research-agent.md  deep-research.md  devops-architect.md  frontend-architect.md  learning-guide.md  performance-engineer.md  pm-agent.md  python-expert.md  quality-engineer.md  refactoring-expert.md  repo-index.md  requirements-analyst.md  root-cause-analyst.md  security-engineer.md  self-review.md  socratic-mentor.md  system-architect.md  technical-writer.md
.factory/modes/: MODE_Business_Panel.md  MODE_Introspection.md
docs/getting-started/: quick-start.md
docs/reference/: commands-list.md
docs/user-guide/: commands.md  droids.md  mcp-servers.md
src/superdroid/: __init__.py
src/superdroid/cli/: __init__.py  doctor.py  install_commands.py  main.py
